--- a/Dai-Lete/Pages/Index.cshtml
+++ b/Dai-Lete/Pages/Index.cshtml
@@ -1,10 +1,44 @@
 ﻿@page
+@using System.Collections
+@using Dai_Lete.Repositories
+@using Dai_Lete.Services
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
+<script>
+function copyRssFeed(ID) {
+     var url = "https://@ConfigManager.getBaseAddress()/PodcastView/podcast-feed?id="+ID;
+     navigator.clipboard.writeText(""+url)
+     alert("Podcast Feed: "+url+"\nCopied to Clipboard")
+}
 
+</script>
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
+<div class="d-flex p-2 flex-wrap">
+
+    @foreach (var pod in FeedCache.metaDataCache)
+    {
+        <div class="border-primary d-flex flex-column p-5 bg-black bg-opacity-25 m-1 rounded-5;" 
+             style="width: 19%; min-width: 200px">
+            <img class="align-content-center h-auto rounded-2"src="@pod.Value.imageUrl"/>
+            
+            <div class="d-inline-flex flex-column h-50 w-75">
+                <a href="PodcastView?id=@pod.Key">
+                    <h3>@pod.Value.title</h3>
+                </a>
+                <p class="card-subtitle">@pod.Value.publisher</p>
+                </div>
+                <button  class="btn" onclick="copyRssFeed('@pod.Key')">
+                    <img src="images/rss.svg" width="52"height="52" alt="Copy RSS Feed"/>
+                </button>
+@*
+        <p>@Html.Raw(@pod.Value.description)</p> <!--This is stupid but it looks pretty.-->
+        *@
+        </div>
+
+    }
+    
 </div>
