--- a/Dai-Lete/Pages/Index.cshtml
+++ b/Dai-Lete/Pages/Index.cshtml
@@ -53,7 +53,7 @@ async function addPodcast(){
             alert("Failed to add podcast! response code:" + resp.status + " " + body)
             return
         }
-        alert("Podcast added, it may take up to 1 hour for podcast to populate")
+        alert("Podcast added, it may take up to 1 hour for episode to process")
         document.getElementById("inputUri").value = ""
         document.getElementById("inputPassword").value = ""
     }
