--- a/Dai-Lete/Pages/Shared/_Layout.cshtml
+++ b/Dai-Lete/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 <head>
