--- a/Dai-Lete/Pages/PodcastView.cshtml
+++ b/Dai-Lete/Pages/PodcastView.cshtml
@@ -51,7 +51,7 @@
                         <br/>
                         
                         <audio controls>
-                        <source src=@Html.Raw($"https://{ConfigManager.getBaseAddress()}/Podcasts/{p.Podcast.Id}/{String.Concat(p.episodeId.Split(Model.InvalidChars))}.mp3")
+                        <source src=@Html.Raw($"https://{ConfigManager.GetBaseAddress()}/Podcasts/{p.Podcast.Id}/{String.Concat(p.episodeId.Split(Model.InvalidChars))}.mp3")
                                 type="audio/mpeg">
                         </audio>
                     </td>
