--- a/Dai-Lete/Pages/Shared/_Layout.cshtml
+++ b/Dai-Lete/Pages/Shared/_Layout.cshtml
@@ -21,13 +21,23 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            @*<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                     </li>
                 </ul>
-            </div>*@
+                @if (User.Identity?.IsAuthenticated == true)
+                {
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <form method="post" asp-controller="Auth" asp-action="Logout" class="d-inline">
+                                <button type="submit" class="btn btn-link nav-link text-dark border-0">Logout</button>
+                            </form>
+                        </li>
+                    </ul>
+                }
+            </div>
         </div>
     </nav>
 </header>
